# cpu-tsdf

./: CMakeLists.txt  FindEigen3.cmake  kinectfusion_config.yaml  t2.txt  t3.txt
2018-06-05-12-05-10/: cam.info.txt  closed_cloud.pcd  input_cloud.txt  input_image.txt  transform.txt  transform.yaml
camera_info/: cam0.info.txt  cam1.info.txt  cam2.info.txt  cam3.info.txt
cdcdata/: pose_00000.txt  pose_00001.txt  pose_00002.txt  pose_00003.txt  pose_00004.txt  pose_00005.txt  pose_00006.txt  pose_00007.txt  pose_00008.txt  pose_00009.txt  pose_00010.txt  pose_00011.txt  pose_00012.txt  pose_00013.txt  pose_00014.txt  pose_00015.txt  pose_00016.txt  pose_00017.txt  pose_00018.txt  pose_00019.txt  pose_00020.txt  pose_00021.txt  pose_00022.txt  pose_00023.txt  pose_00024.txt  pose_00025.txt  pose_00026.txt  pose_00027.txt  pose_00028.txt  pose_00029.txt  pose_00030.txt  pose_00031.txt  pose_00032.txt  pose_00033.txt  pose_00034.txt  pose_00035.txt
common/include/: Dynamixel.h  aruco_marker.hpp  config.hpp  configuration.hpp  cuda_headers.hpp  curlserver.hpp  data_types.hpp  filters.hpp  kinect_fusion.hpp  loader.hpp  matrix_utils.hpp  realsense.hpp  realsense2.hpp  segmentation.hpp  util.hpp  webserver.hpp
common/include/util/: depth_utils.h  random_utils.h
common/src/: Dynamixel.cpp  aruco_marker.cpp  curlserver.cpp  dxl_hal.c  filters.cpp  kinect_fusion.cpp  loader.cpp  matrix_utils.cpp  realsense.cpp  realsense2.cpp  segmentation.cpp  util.cpp  webserver.cpp
common/src/cuda/: marching_cubes.cu  marching_cubes_table.hpp~  save_model.cu  save_model.cu~  volume_integration.cu
config/: aruco_board.xml  config.yaml  configuration.yaml~  kinectfusion_config.yaml~  parameters.xml  parameters.xml~  realsense_parameters.yaml  realsense_parameters.yaml~  tag.xml
include/cpu_tsdf/: tsdf_volume_octree.h
mydata/: pose_00000.txt  pose_00001.txt  pose_00002.txt  pose_00003.txt  pose_00004.txt  pose_00005.txt  pose_00006.txt  pose_00007.txt  pose_00008.txt  pose_00009.txt  pose_00010.txt  pose_00011.txt  pose_00012.txt  pose_00013.txt  pose_00014.txt  pose_00015.txt  pose_00017.txt  pose_00018.txt  pose_00019.txt  pose_00020.txt  pose_00021.txt  pose_00022.txt  pose_00023.txt  pose_00024.txt  pose_00025.txt  pose_00026.txt  pose_00027.txt  pose_00028.txt  pose_00029.txt  pose_00030.txt  pose_00031.txt  pose_00032.txt  pose_00033.txt  pose_00034.txt  pose_00035.txt
newdata/: pose_00000.txt  pose_00001.txt  pose_00002.txt  pose_00003.txt  pose_00004.txt  pose_00005.txt  pose_00006.txt  pose_00007.txt  pose_00008.txt  pose_00009.txt  pose_00010.txt  pose_00011.txt  pose_00012.txt  pose_00013.txt  pose_00014.txt  pose_00015.txt  pose_00016.txt  pose_00017.txt  pose_00018.txt  pose_00019.txt  pose_00020.txt  pose_00021.txt  pose_00022.txt  pose_00023.txt  pose_00024.txt  pose_00025.txt  pose_00026.txt  pose_00027.txt  pose_00028.txt  pose_00029.txt  pose_00030.txt  pose_00031.txt  pose_00032.txt  pose_00033.txt  pose_00034.txt  pose_00035.txt
sample_data/: README.md  pose_00000.txt  pose_00001.txt  pose_00002.txt  pose_00003.txt  pose_00004.txt  pose_00005.txt  pose_00006.txt  pose_00007.txt  pose_00008.txt  pose_00009.txt  pose_00010.txt  pose_00011.txt  pose_00012.txt  pose_00013.txt  pose_00014.txt  pose_00015.txt  pose_00016.txt  pose_00017.txt  pose_00018.txt  pose_00019.txt
src/: color_segmentation.cpp  color_segmentation_test.cpp  data_collection.cpp  final_implemetation.cpp  multi_reconstruction.cpp  realsense_dnn.cpp  test_charuco.cpp  test_dynamixel_realsense.cpp  test_functions.cpp  test_model.cpp  test_object_contours.cpp  test_pitag.cpp  test_realsense.cpp
src/prog/: integrate.cpp  integrate.cpp~
transform/: transform.py  transform.txt  transform.txt~  transform.yaml  transform.yaml~  transform_rotation.yaml  transform_rotation.yaml~  transform_translation.yaml  transform_translation.yaml~
